<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RuiThreadPoolExecutor</string>
    <string name="wifi_connecting">wifi connecting</string>
    <string name="network_connecting">network connecting</string>
    <string name="no_wifi">no wifi</string>
    <string name="no_network">No available network!</string>
    <string name="unknow_host">unknow host</string>
    <string name="unsupported_encoding">unsupported encoding</string>
    <string name="response_statuscode_error">status code error</string>
    <string name="no_http_response">no http response</string>
    <string name="socket_error">socket error</string>
    <string name="connect_timeout">connect timeout</string>
    <string name="socket_timeout">socket timeout</string>
    <string name="interrupted_ioexception">io interrupted</string>
    <string name="ssl_exception">ssl error</string>
    <string name="unknow_error">unknow error</string>
    <string name="folder_no_space">folder not have enough space for download</string>
    <string name="start_load">start load,click to cancel</string>
    <string name="loading">downloading %1$s MB/%1$s MB,click to cancel</string>
    <string name="cancel_load">canceled download</string>
    <string name="load_complete">download complete,click to install</string>
    <string name="load_error">download error</string>
    <string name="load_wait">download wait</string>
    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_later">Later</string>
    <string name="action_set">Setting</string>
    <string name="rui_prompt">RUI prompt info</string>
    <string name="warning">Warning</string>
    <string name="set_no_network">No available network,please click to set.</string>
    <string name="rui_network_erro">Network is busy, please try again later</string>
    <string name="rui_update_check_ticker">Checking.....</string>
    <string name="rui_update_new_content">Found the new version, please update</string>
    <string name="rui_update_new_ticker">Found the new version, please download</string>
    <string name="rec_update_new_ticker">Getting new applications......</string>
    <string name="rec_update_new_content">Getting new applications.....</string>
    <string name="rec_updaet_ing_ticker">Fetching the new infos</string>
    <string name="rec_update_done_ticker">Fetch done, you have got %1$s apps.</string>
    <string name="rec_update_fail_ticker">Update failed</string>
    <string name="rec_update_check_ticker">Checking.....</string>
    <string name="rec_network_erro">Network is busy, please try again later</string>
    <string name="rec_no_update">The recommended apps are already the latest!</string>
    <string name="rec_server_running">The recommended apps update service is running!</string>
    <string name="classify_failed">Classification failed! Please try later.</string>
    <string name="classify_unnecessary">All applications have been classified!</string>
    <string name="classify_start">Classify......</string>
    <string name="classify_done">Classification completed</string>
    <string name="download_prompt">Download Prompt info</string>
    <string name="rui_download_cancel">Downloading %1$s has been canceled.</string>
    <string name="rui_download_waiting_ticker">: %1$s has been pushed into the queue</string>
    <string name="rui_download_waiting_content">Wait for downloading, and click to cancel download.</string>
    <string name="rui_download_start_ticker">: %1$s start to download</string>
    <string name="rui_download_progress">Downloaded %1$s%%, and click to cancel download.</string>
    <string name="rui_download_done_ticker">%1$s Download is completed, please click to install.</string>
    <string name="rui_download_done_content">Completed, please click to install</string>
    <string name="rui_download_fail_ticker">%1$s Failed,please try again</string>
    <string name="rui_download_fail_content">Failed, please try again</string>
    <string name="rui_download_repeat">%1$s has already been in the queue</string>
    <string name="rui_no_update">Your current version is already the latest.</string>
    <string name="rui_download_busy">Download tasks are too many, please try again later!</string>
    <string name="apphome_essential">Necessary</string>
    <string name="apphome_common">Common</string>
    <string name="apphome_game">Game</string>
    <string name="apphome_social">Social</string>
    <string name="apphome_media">Media</string>
    <string name="apphome_life">Life</string>
    <string name="apphome_tool">Tool</string>
    <string name="apphome_other">Others</string>
    <string name="apphome_goHome">Go Home</string>
    <string name="menu_wandoujia">SnapPea</string>
    <string name="menu_91">91 Mobile</string>
    <string name="menu_baidu">BaiDu App</string>
    <string name="process" />
    <string name="application_name">XH Home for TV</string>
    <string name="dock_tv_name">Live TV</string>
    <string name="dock_video_name">Videos</string>
    <string name="dock_apps_name">APPS</string>
    <string name="dock_music_name">Music</string>
    <string name="dock_game_name">Game</string>
    <string name="dock_internet_name">Internet</string>
    <string name="dock_setting_name">Setting</string>
    <string name="menu_manage_apps">Manage Applications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manual_classify">Classify</string>
    <string name="about_rui">About</string>
    <string name="default_city">Wuhan</string>
    <string name="divide_year">/</string>
    <string name="divide_month">/</string>
    <string name="divide_day" />
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="activity_not_found">Application is not installed on your TV.</string>
    <string name="all_app_title">My Application</string>
    <string name="replace_download_dlg_title">Install/Download</string>
    <string name="replace_download_dlg_text">The app has already been downloaded, please install it or redownload.</string>
    <string name="install">Install</string>
    <string name="download">Redownload</string>
    <string name="download_dialog_title">Download prompts</string>
    <string name="download_dialog_content">Do you want to download %1$s?</string>
    <string name="download_dialog_ok">Download</string>
    <string name="download_dialog_cancel">Next time</string>
    <string name="empty_prompt_1">Networking can intelligently classified,please set the Network</string>
    <string name="empty_prompt_2">Top applications can be download from Navigation folder.</string>
    <string name="noinstall">The application is not installed</string>
    <string name="downlaodprompt">Download prompt</string>
    <string name="downlaodmsg">Are you sure to download x? It will take a certain traffic.</string>
    <string name="rui_update_title">RUI Update</string>
    <string name="live_video">Live TV</string>
    <string name="demand_video">Videos</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="manage_app_title">Operate</string>
    <string name="manage_app_open">Open</string>
    <string name="manage_app_uninstall">Uninstall</string>
    <string name="manage_app_details">Details</string>
    <string name="manage_app_deleteSci">Delete Shortchut</string>
</resources>
